--- a/android/PromGameMobile/res/values/colors.xml
+++ b/android/PromGameMobile/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="white">#FFFFFF</color>
     <color name="blue">#0099CC</color>
     <color name="orange">#FF8800</color>
     <color name="red">#CC0000</color>
