Created Profile view layout

--- a/android/PromGameMobile/res/layout/profile_activity.xml
+++ b/android/PromGameMobile/res/layout/profile_activity.xml
@@ -1,8 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical"
+    android:padding="10dp" >
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/LinearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/profile_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginRight="10dp"
+                android:contentDescription="ProfileImage"
+                android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
+
+            <TextView
+                android:id="@+id/email_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/profile_image"
+                android:layout_toRightOf="@id/profile_image"
+                android:text="TextView"
+                android:textSize="20sp" />
+
+            <View
+                android:id="@+id/separator"
+                android:layout_width="fill_parent"
+                android:layout_height="2dp"
+                android:layout_above="@id/email_text"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_toRightOf="@id/profile_image"
+                android:background="#000000" />
+
+            <TextView
+                android:id="@+id/name_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/separator"
+                android:layout_toRightOf="@id/profile_image"
+                android:text="TextView"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" >
+
+            <ProgressBar
+                android:id="@+id/level_bar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/level_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/points_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:text="TextView" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/LinearLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:id="@+id/badges_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="5dp" >
+
+                <TextView
+                    android:layout_width="150dp"
+                    android:layout_height="60dp"
+                    android:background="@color/green"
+                    android:layout_marginRight="3dp"
+		            android:text="Badges"
+		            android:gravity="center_vertical"
+		            android:paddingLeft="10dp"
+		            android:textSize="18sp"
+		            android:textStyle="bold"
+		            android:textColor="@color/white"
+		            android:textAllCaps="true" />
+
+                <View
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@color/green"
+                    android:layout_marginRight="3dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="5dp" >
+
+                <View
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@color/orange"
+                    android:layout_marginRight="3dp" />
+
+                <View
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@color/green"
+                    android:layout_marginRight="3dp" />
+
+                <View
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@color/red"
+                    android:layout_marginRight="3dp" />
+
+                <View
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@color/blue"
+                    android:layout_marginRight="3dp" />
+                
+            </LinearLayout>
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:background="#aaaaaa" />
+
+        <LinearLayout
+            android:id="@+id/tags_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="5dp" >
+                
+                <TextView
+                    android:layout_width="150dp"
+                    android:layout_height="60dp"
+                    android:background="@color/orange"
+                    android:layout_marginRight="3dp"
+		            android:text="Tags"
+		            android:gravity="center_vertical"
+		            android:paddingLeft="10dp"
+		            android:textSize="18sp"
+		            android:textStyle="bold"
+		            android:textColor="@color/white"
+		            android:textAllCaps="true" />
+
+                <View
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@color/orange"
+                    android:layout_marginRight="3dp" />
+                
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="5dp" >
+               
+              	<TextView
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:background="@color/grey"
+                    android:layout_marginRight="3dp"
+		            android:text="clothes"
+		            android:gravity="center"
+		            android:textSize="18sp"
+		            android:textColor="@color/white"
+		            android:textAllCaps="false" />
+
+              	<TextView
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:background="@color/grey"
+                    android:layout_marginRight="3dp"
+		            android:text="shoes"
+		            android:gravity="center"
+		            android:textSize="18sp"
+		            android:textColor="@color/white"
+		            android:textAllCaps="false" />
+
+              	<TextView
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:background="@color/grey"
+                    android:layout_marginRight="3dp"
+		            android:text="slim fit"
+		            android:gravity="center"
+		            android:textSize="18sp"
+		            android:textColor="@color/white"
+		            android:textAllCaps="false" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+</RelativeLayout>
