Modified Profile view layout and colors.xml

--- a/android/PromGameMobile/res/layout/profile_activity.xml
+++ b/android/PromGameMobile/res/layout/profile_activity.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp" >
+    android:padding="10dp" 
+    android:background="#7ebbdc">
 
     <LinearLayout
         android:id="@+id/LinearLayout1"
@@ -11,65 +12,62 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <RelativeLayout
+        <LinearLayout
+            android:id="@+id/LinearLayout3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center" >
 
             <ImageView
                 android:id="@+id/profile_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginRight="10dp"
                 android:contentDescription="ProfileImage"
-                android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
+                android:src="@drawable/abs__ab_bottom_solid_dark_holo"
+                android:layout_margin="10dp"
+                android:padding="5dp"
+                android:background="@color/white" />
+
+			<TextView
+                android:id="@+id/name_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Jonh Doe"
+                android:textSize="26sp"
+                android:textColor="@color/white" />
+
+            <View
+                android:id="@+id/separator"
+                android:layout_width="fill_parent"
+                android:layout_height="3dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/white" />
 
             <TextView
                 android:id="@+id/email_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/profile_image"
-                android:layout_toRightOf="@id/profile_image"
-                android:text="TextView"
-                android:textSize="20sp" />
-
-            <View
-                android:id="@+id/separator"
-                android:layout_width="fill_parent"
-                android:layout_height="2dp"
-                android:layout_above="@id/email_text"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_toRightOf="@id/profile_image"
-                android:background="#000000" />
-
-            <TextView
-                android:id="@+id/name_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@id/separator"
-                android:layout_toRightOf="@id/profile_image"
-                android:text="TextView"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
+                android:text="jonhdoe@mail.com"
+                android:textSize="20sp"
+                android:textColor="@color/white" />
+            
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" >
-
-            <ProgressBar
-                android:id="@+id/level_bar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" />
+            android:layout_marginTop="20dp" >
 
             <TextView
                 android:id="@+id/level_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="Level 3"
+                android:textSize="22sp" 
+                android:textColor="@color/white"
+                android:layout_marginLeft="10dp" />
 
             <TextView
                 android:id="@+id/points_text"
@@ -77,11 +75,24 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:text="TextView" />
+                android:text="453/500"
+                android:textSize="22sp"
+                android:textColor="@color/white"
+                android:layout_marginRight="10dp" />
+            
+            <ProgressBar
+                android:id="@+id/level_bar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp" />
+
+            
+            
         </RelativeLayout>
     </LinearLayout>
 
-    <LinearLayout
+	<LinearLayout
         android:id="@+id/LinearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -92,73 +103,64 @@
             android:id="@+id/badges_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:layout_marginBottom="20dp" >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="5dp" >
+                android:layout_marginBottom="7dp"
+                android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="150dp"
-                    android:layout_height="60dp"
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="5dp"
                     android:background="@color/green"
-                    android:layout_marginRight="3dp"
-		            android:text="Badges"
-		            android:gravity="center_vertical"
-		            android:paddingLeft="10dp"
-		            android:textSize="18sp"
-		            android:textStyle="bold"
-		            android:textColor="@color/white"
-		            android:textAllCaps="true" />
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Badges"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
 
                 <View
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@color/green"
-                    android:layout_marginRight="3dp" />
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@color/green" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="5dp" >
+                android:orientation="horizontal" >
 
                 <View
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@color/orange"
-                    android:layout_marginRight="3dp" />
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@color/orange" />
 
                 <View
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@color/green"
-                    android:layout_marginRight="3dp" />
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@color/green" />
 
                 <View
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@color/red"
-                    android:layout_marginRight="3dp" />
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@color/red" />
 
                 <View
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@color/blue"
-                    android:layout_marginRight="3dp" />
-                
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@color/blue" />
             </LinearLayout>
         </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:background="#aaaaaa" />
 
         <LinearLayout
             android:id="@+id/tags_layout"
@@ -169,69 +171,66 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="5dp" >
-                
+                android:layout_marginBottom="7dp"
+                android:orientation="horizontal" >
+
                 <TextView
-                    android:layout_width="150dp"
-                    android:layout_height="60dp"
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="5dp"
                     android:background="@color/orange"
-                    android:layout_marginRight="3dp"
-		            android:text="Tags"
-		            android:gravity="center_vertical"
-		            android:paddingLeft="10dp"
-		            android:textSize="18sp"
-		            android:textStyle="bold"
-		            android:textColor="@color/white"
-		            android:textAllCaps="true" />
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Tags"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
 
                 <View
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@color/orange"
-                    android:layout_marginRight="3dp" />
-                
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@color/orange" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="5dp" >
-               
-              	<TextView
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:background="@color/grey"
-                    android:layout_marginRight="3dp"
-		            android:text="clothes"
-		            android:gravity="center"
-		            android:textSize="18sp"
-		            android:textColor="@color/white"
-		            android:textAllCaps="false" />
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal" >
 
-              	<TextView
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
+                <TextView
+                    android:layout_width="75dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="5dp"
                     android:background="@color/grey"
-                    android:layout_marginRight="3dp"
-		            android:text="shoes"
-		            android:gravity="center"
-		            android:textSize="18sp"
-		            android:textColor="@color/white"
-		            android:textAllCaps="false" />
+                    android:gravity="center"
+                    android:text="clothes"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
 
-              	<TextView
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
+                <TextView
+                    android:layout_width="75dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="5dp"
                     android:background="@color/grey"
-                    android:layout_marginRight="3dp"
-		            android:text="slim fit"
-		            android:gravity="center"
-		            android:textSize="18sp"
-		            android:textColor="@color/white"
-		            android:textAllCaps="false" />
+                    android:gravity="center"
+                    android:text="shoes"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
 
+                <TextView
+                    android:layout_width="75dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@color/grey"
+                    android:gravity="center"
+                    android:text="slim fit"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
