--- a/android/PromGameMobile/res/values/colors.xml
+++ b/android/PromGameMobile/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="grey">#AAAAAA</color>
     <color name="blue">#0099CC</color>
     <color name="orange">#FF8800</color>
