--- a/android/PromGameMobile/res/values/colors.xml
+++ b/android/PromGameMobile/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="orange">#FF8800</color>
     <color name="red">#CC0000</color>
     <color name="green">#669900</color>
+    <color name="blue_delas">#7ebbdc</color>
+    
 </resources>
