--- a/android/PromGameMobile/res/layout/profile_activity.xml
+++ b/android/PromGameMobile/res/layout/profile_activity.xml
@@ -125,10 +125,12 @@
                     android:textSize="22sp" />
 
                 <View
+                    android:id="@+id/badges_view"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginRight="5dp"
                     android:background="@color/green" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -187,10 +189,12 @@
                     android:textSize="22sp" />
 
                 <View
+                    android:id="@+id/tags_view"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginRight="5dp"
                     android:background="@color/orange" />
+
             </LinearLayout>
 
             <LinearLayout
